Server deployment fixes.

--- a/confs/uwsgi.conf
+++ b/confs/uwsgi.conf
@@ -1,4 +1,4 @@
-# description "uWSGI server for {{ PROJECT_SLUG }}"
+# description "uWSGI server for {{ PROJECT_FILENAME }}"
 
 start on runlevel [2345]
 stop on runlevel [!2345]
